Fixed Services Secondary Card Overflow Issue

--- a/scss/layout/_testimonials.scss
+++ b/scss/layout/_testimonials.scss
@@ -97,6 +97,7 @@
             box-shadow: none;
             flex-wrap: wrap;
             position: relative;
+            height: 100%;
 
             &::after {
                 content: "";
